--- a/slides/lecture11.qmd
+++ b/slides/lecture11.qmd
@@ -1,602 +1,884 @@
 ---
-title: "Gaussian Mixtures and Mixed Models with the EM Algorithm"
+title: "Rcpp"
 ---
 
 {{< include _common.qmd >}}
 
 ```{r setup, include=FALSE}
-
-library(animate)
 library(patchwork)
-library(Matrix)
 
-set.seed(1422)
+old_options <- options(digits = 4)
+```
+
+```{Rcpp source-rcpp, ref.label=knitr::all_rcpp_labels(), include=FALSE}
+
+```
+
+```{Rcpp namespace, include = FALSE}
+#include <Rcpp.h>
+using namespace Rcpp;
 ```
 
 ## Today
 
-Continue with the EM algorithm. Two examples.
+### C++ and Rcpp
 
-### Gaussian Mixtures
+- Why do we want to use C++?
+- What is **compiled** code?
+- How do we use Rcpp to connect R to C++?
+- What are the pitfalls and benefits of using Rcpp?
 
-Hands-on example with Gaussian mixtures, computing the empirical Fisher
-information in multiple ways.
+## Why R?
 
-### Mixed Models
-
-Fitting mixed models using the EM algorithm
-
-# Gaussian Mixtures
-
-## Gaussian Mixtures
-
-The marginal density is
-
-$$
-f(x) = p \frac{1}{\sqrt{2 \pi \sigma_1^2}} e^{-\frac{(x - \mu_1)^2}{2 \sigma_1^2}} +
-(1 - p)\frac{1}{\sqrt{2 \pi \sigma_2^2}}e^{-\frac{(x - \mu_2)^2}{2 \sigma_2^2}}.
-$$
-
-and we will regard $\theta = (p, \mu_1, \mu_2)$ as the unknown parameters, while
-$\sigma_1$ and $\sigma_2$ are fixed.
+Why are we even using R?
 
 . . .
-
-$$Q(\theta \mid \theta')  = \sum_{i=1}^n \hat{p}_{i} \left(\log(p) - \frac{(x_i - \mu_1)^2}{2 \sigma_1^2} \right) + (1 - \hat{p}_{i})\left( \log(1-p) - \frac{(x_i - \mu_2)^2}{2 \sigma_2^2} \right)$$
-
-where $\hat{p}_i = P_{\theta'}(Z_i = 1 \mid X_i = x_i)$,
-
--- which attains its maximum in
-
-$$
-\theta = \left(\frac{1}{n} \sum_{i} \hat{p}_i,\quad \frac{1}{\sum_{i} \hat{p}_i} \sum_{i} \hat{p}_i x_i,\quad
-\frac{1}{\sum_{i} (1 - \hat{p}_i)} \sum_{i} (1 - \hat{p}_i) x_i \right).
-$$
-
-### Simulation
 
 :::: {.columns}
 
 ::: {.column width="47%"}
 
+Because R lets us
+
+- work interactively,
+- explore and visualize data via a rich toolset,
+- easily retrieve or generate data,
+- summarize and report (via RMarkdown/Quarto), and
+- make use of a comprehensive ecosystem of packages.
+
+:::
+
+::: {.column width="47%"}
+
+![](../images/r-logo.svg)
+
+:::
+
+::::
+
+## Why _Not_ R?
+
+It is often slow due to being an **interpreted** language.
+
+:::: {.columns}
+
+::: {.column width="47%"}
+
+### Interpreted Languages
+
+- Execution of code happens line by line.
+- Many functions are written in C, but you still have to call them from R.
+- **Examples:** R, Python, Matlab, Javascript.
+
+:::
+
+::: {.column width="47%"}
+
+### Compiled Languages
+
+- Code is translated into machine code before execution.
+- This makes it faster.
+- **Examples:** C, C++, Fortran, Java
+
+:::
+
+::::
+
+## Compiled vs Interpreted Languages
+
+![](../images/chatgpt-compiled-interpreted.png){width=63%}
+
+## Compiled Code
+
+### C++ Code
+
+```cpp
+int add(int a, int b) { return a + b; }
+
+int main() {
+  std::cout << add(2, 3) << std::endl;
+  return 0;
+}
+```
+
+. . .
+
+### Assembly Representation
+
+```assembly
+0000000000401130 <main>:
+  401130:       55                      push   %rbp
+  401131:       48 89 e5                mov    %rsp,%rbp
+  401134:       48 83 ec 10             sub    $0x10,%rsp
+  ···           ···                     ···    ···
+  401149:       8b 45 f8                mov    -0x8(%rbp),%eax
+  401165:       c9                      leaveq
+  401166:       c3                      retq
+```
+
+## Why C++?
+
+- C++ generates machine code: no longer have to be scared of loops!
+- Pass by reference: no need to copy large objects.
+- Access to external C++ libraries
+- Wrap and reuse C++ code with other languages
+- Compilation catches bugs early.
+
+. . .
+
+:::: {.columns}
+
+::: {.column width="47%"}
+
+## Why _Not_ C++?
+
+- Compiling adds overhead.
+- Debugging is more complicated.
+- Distributing code is more involved.
+
+:::
+
+::: {.column width="47%"}
+
+![](../images/compiling.png){width=80%}
+
+:::
+
+::::
+
+## R Can Be Extended
+
+But we can extend R by coupling it to a compiled language, like
+
+- C,
+- C++,
+- Fortran, and
+- Java.
+
+. . .
+
+### Problem
+
+Doing so has historically been **tedious** and **error-prone**.
+
+### Basic C++ Version of `sum()`
+
+```{c sum-c, eval=FALSE}
+// foo.c
+#include <R.h>
+#include <Rinternals.h>
+
+extern "C++"
+{
+  SEXP sum_c(SEXP x)
+  {
+    x = PROTECT(coerceVector(x, REALSXP));
+    SEXP s = PROTECT(allocVector(REALSXP, 1));
+    double* x_ref = REAL(x);
+    double* s_ref = REAL(s);
+
+    for (int i = 0; i < length(x); i++)
+      s_ref[0] += x_ref[i];
+
+    UNPROTECT(2);
+
+    return s;
+  }
+}
+```
+
+### C++ Example (Continued)
+
+Next, we need to compile this into a binary file by calling:
+
+```{sh shlib, eval = FALSE}
+R CMD SHLIB foo.c
+```
+
+. . .
+
+Then, in R, we would call this:
+
+```{r foo-so, eval = FALSE}
+dyn.load("foo.so") # or `foo.dll` if on Windows
+```
+
+. . .
+
+Finally, access function by calling this:
+
+```{r foo-r, eval = FALSE}
+x <- c(1.0, 1.5, -0.2, 0.1, 0.0)
+.Call("sum_c", x = x)
+```
+
+```{r, echo = FALSE}
+sum(c(1.0, 1.5, -0.2, 0.1, 0.0))
+```
+
+## Rcpp
+
+Rcpp simplifies this process **considerably**.
+
+```{Rcpp rcpp-sum, eval = FALSE}
+// [[Rcpp::export]]
+double sum_cpp(Rcpp::NumericVector x) {
+  double total = 0;
+  const int n = x.size();
+
+  for (int i = 0; i < n; ++i) {
+    total += x[i];
+  }
+
+  return total;
+}
+```
+
+### Exporting C++ Functions
+
+Automizes the process of compiling, linking, and exporting.
+
+. . .
+
+### R Interface
+
+- Provides collection of classes to represent R objects
+  - `Rcpp::NumericalVector`
+  - `Rcpp::DataFrame`
+- Adds a number of functions, often vectorized, to manipulate these objects
+  - `Rcpp::sum()`
+  - `Rcpp::runif()`
+- Seamless transformation between R and C++ objects.
+
+## Installing Rcpp
+
+### Linux
+
+Depends on distro, but on Ubuntu call this:
+
+```r
+sudo
+apt
+install
+r - base - dev
+```
+
+### OSX
+
+You need Xcode. Open up a terminal and call this:
+
+```sh
+xcode-select --install
+```
+
+### Windows
+
+Install [Rtools](https://cran.r-project.org/bin/windows/Rtools/).
+
+## Side-By-Side Comparison
+
+:::: {.columns}
+
+::: {.column width="47%"}
+
+### R
+
 ```{r}
-sigma1 <- 1.5
-sigma2 <- 1.5 # Same variances
+library(Rcpp)
 
-p <- 0.5
-mu1 <- -0.5
-mu2 <- 4
-
-n <- 5000
-set.seed(321)
-z <- sample(
-  c(TRUE, FALSE),
-  n,
-  replace = TRUE,
-  prob = c(p, 1 - p)
-)
-
-x <- numeric(n)
-n1 <- sum(z)
-x[z] <- rnorm(n1, mu1, sigma1)
-x[!z] <- rnorm(n - n1, mu2, sigma2)
+sum_r <- function(x) {
+  total <- 0
+  for (i in seq_along(x)) {
+    total <- total + x[i]
+  }
+  total
+}
 ```
 
 :::
 
 ::: {.column width="47%"}
 
-```{r, echo=FALSE, fig.height=5, fig.width = 6}
-gausdens <- function(x) {
-  (p *
-    exp(-(x - mu1)^2 / (2 * sigma1^2)) /
-    sigma1 +
-    (1 - p) * exp(-(x - mu2)^2 / (2 * sigma2^2)) / sigma2) /
-    sqrt(2 * pi)
+### C++
+
+```cpp
+#include <Rcpp.h>
+using namespace Rcpp;
+
+// [[Rcpp::export]]
+double sum_cpp(NumericVector x) {
+  double total = 0;
+  const int n = x.size();
+  for (int i = 0; i < n; ++i) {
+    total += x[i];
+  }
+  return total;
 }
-xx <- seq(-5, 9, 0.1)
-hist(x, freq = FALSE, ylim = c(0, 0.25), main = "", border = "transparent")
-curve(gausdens(x), add = TRUE, col = "dark orange", lwd = 2)
 ```
 
 :::
 
 ::::
 
-### The E-Step
+## Writing Code in R and Rcpp
 
-$$
-\hat{p}_i = P_{\theta'} (Z_i = 1 \mid X = x_i) =
-\frac{ p'_1 e^{-\frac{(x_i - \mu_1')^2}{2 \sigma_1^2}}}{
-\left( p'_1 e^{-\frac{(x_i - \mu_1')^2}{2 \sigma_1^2}} +
-\frac{\sigma_1 (1 - p'_1)}{\sigma_2} e^{-\frac{(x_i - \mu_2')^2}{2 \sigma_2^2}}\right) }
-$$
+### Notable Differences
 
-### EM Algorithm
+- **Vectors are indexed from 0**
+- Statements end with a semicolon (**`;`**)
+- The assignment operator is **`=`**
+- Input and output types need to be declared
+- Class methods have a different syntax (e.g. `x.size()` not `size(x)`)
+- An explicit `return` statement is required to return a value
+- For loops have a different syntax: `for (<init>; <check>; <increment>)`
+- You don't assign to create functions.
+
+. . .
+
+### Similarities
+
+- Rcpp classes, like `NumericVector` and `List`, unify data structures in R and
+  C++
+- Rcpp implements vectorized arithmetic (as in R)
+- Rcpp implements a long list of vectorized R-like functions
+
+## Including C++ Code in R
 
 ```{r}
-source(here::here("R/em_gauss_mix_exercise.R"))
-EM <- EM_gauss_mix(x)
-```
-
-. . .
-
-```{r}
-EM(c(0.4, -0.2, 4.5))
-EM(c(0.9, 1, 2))
-```
-
-. . .
-
-What happens when evaluating the following, and why?
-
-```{r, eval = FALSE}
-EM(c(0.6, 3, 1))
-```
-
-## Gradients and numDeriv
-
-Recall that
-$$\nabla_{\theta} \ell(\hat{\theta}) = \nabla_{\theta} Q(\hat{\theta}, \hat{\theta}).$$
-
-. . .
-
-```{r q-def}
-Q <- function(par, par_prime, EStep) {
-  phat <- EStep(par_prime)
-  p <- par[1]
-  mu1 <- par[2]
-  mu2 <- par[3]
-  sum(
-    phat *
-      (log(p) - (x - mu1)^2 / (2 * sigma1^2)) +
-      (1 - phat) * (log(1 - p) - (x - mu2)^2 / (2 * sigma2^2))
-  )
-}
-```
-
-. . .
-
-```{r numderiv-load}
-library(numDeriv)
-grad1 <- function(par) grad(function(par) -neg_loglik(par, x), par)
-grad2 <- function(par) {
-  grad(Q, par, par_prime = par, EStep = environment(EM)$EStep)
-}
-```
-
-## Checking the Gradient Identity
-
-```{r grad-identities-1}
-grad1(c(0.5, 0, 4))
-grad2(c(0.5, 0, 4))
+library(Rcpp)
 ```
 
 --
 
-```{r grad-identities-2}
-par_hat <- EM(c(0.5, 0, 4))
-grad1(par_hat)
-grad2(par_hat)
+The C++ code can be passed directly to the `cppFunction()` as a text string for
+compilation and setting up an R interface.
+
+```{r}
+cppFunction(
+  "int one() {return 1;}"
+)
 ```
 
-## Fisher Information
-
-Let $\hat{i}_X = - D^2_{\theta} \ell(\hat{\theta})$ denote the observed Fisher
-information.
-
-:::: {.columns}
-
-::: {.column width="47%"}
-
-Then \begin{align} \hat{i}_X &= - D_{\overline{\theta}} \left( \nabla*{\theta}
-Q(\overline{\theta} \mid \overline{\theta})\right) |*{\overline{\theta} =
-\hat{\theta}} \\ & = - D^2*{\theta} Q(\hat{\theta} \mid \hat{\theta}) -
-D*{\theta'} \nabla*{\theta} Q(\hat{\theta} \mid \hat{\theta})\\ & = - \left(I -
-D*{\theta} \Phi(\hat{\theta})^T\right) D^2*{\theta} Q(\hat{\theta} \mid
-\hat{\theta}) \end{align} where $$\Phi(\theta') = \textrm{arg max}*{\theta} \
-Q(\theta \mid \theta')$$ is the EM-map.
-
-:::
-
-::: {.column width="47%"}
-
-### Exercise
-
-- Download the [source code here](R/em_gauss_mix_exercise.R)
-- Implement these three methods for computing the Fisher information in the
-  Gaussian mixture problem.
-- Test that they work.
-- Benchmark them against one another.
-
-:::
-
-::::
-
-# Mixed Models
-
-## Mixed Model (General Form)
-
-General form is $$y = X\beta + Zu + \varepsilon$$ where
-
-:::: {.columns}
-
-::: {.column width="47%"}
-
-- $y$ is the length $n$ response vector,
-- $X$ is the $n \times p$ fixed effects design matrix,
-- $\beta$ is the length $p$ fixed effects parameter vector,
-- $Z$ is the $n \times m$ random effects design matrix, and
-- $u$ is the length $m$ random effects vector.
-
-:::
-
-::: {.column width="47%"}
-
-### Example
-
-$$Z = \begin{bmatrix} 1 & 0 & 0 & x_{1j} \\ 0 & 1 & 0 & x_{2j} \\ 0 & 0 & 1 & x_{3j} \\ \vdots & \vdots & \vdots & \vdots \\ 0 & 1 & 0 & x_{nj} \end{bmatrix}$$
-
-:::
-
-::::
-
-![](../images/mixed-model-effects.jpg){width=85%}
-
-### Hierarchical Data
-
-![](../images/hierarchical-data.png){width=90%}
-
-### Simpson's Paradox
-
-![](../images/simpsons-paradox.png){width=90%}
-
-## Estimation
-
-Typical assumptions are
-
-- $u \sim \mathcal{N}(0, \Sigma_u)$
-- $\varepsilon \sim \mathcal{N}(0, \sigma^2 I)$
-- $\operatorname{cov}(u, \varepsilon) = 0$
-
 . . .
 
-### Fits the EM Framework
+And then the function can be called from R.
 
-- $u, \varepsilon$ are latent (unobserved)
-- $y$ is observed
-
-. . .
-
-### Distribution of $(u, \varepsilon)$
-
-$$\begin{bmatrix}u \\ \varepsilon\end{bmatrix} \sim \mathcal{N}\left(0,\begin{bmatrix}\Sigma_u & 0 \\ 0 & I\sigma^2\end{bmatrix}\right)$$
-
-## Marginal Likelihood
-
-$$y = X\beta + Zu + \varepsilon = \begin{bmatrix}Z & I_n\end{bmatrix}\begin{bmatrix}u \\ \varepsilon\end{bmatrix} + X\beta$$
-is a linear combination, so we have
-$$y \sim \mathcal{N}(\mu_y = X\beta,\Sigma_y =  Z\Sigma_u Z^T + \sigma^2 I_n).$$
-
-. . .
-
-So, we can write the log-likelihood as
-$$\ell(\theta) = -\frac{1}{2} \left( (y - X\beta)^T \Sigma_y^{-1} (y - X\beta) + \log\lvert \Sigma_y \rvert \right).$$
-
-. . .
-
-Can actually solve this problem directly!
-
-. . .
-
-**But** requires solving a large linear system and computing the log-determinant
-of the $n \times n$ matrix $Z \Sigma_u Z^T + \sigma^2 I_n$.
-
-## Joint Distribution
-
-The conditional distribution of $y$ given $u$ is
-$$(y \mid u) \sim \mathcal{N}(X\beta + Zu, \sigma^2 I).$$
-
-. . .
-
-And since $f(y, u) = f(y \mid u) f(u)$, we have
-$$f(y, u) \propto \frac{1}{\sqrt{\lvert\Sigma_u\rvert \sigma^{2n}}}  \exp\left( -\frac{1}{2\sigma^2} \lVert y - X\beta - Zu \rVert_2^2 - \frac{1}{2} u^T \Sigma_u^{-1} u\right).$$
-
-. . .
-
-The log-likelihood is then
-$$\ell(\theta) = -\frac{1}{2\sigma^2} \lVert y - X\beta - Zu\rVert^2_2  - \frac{1}{2}u^T \Sigma_u^{-1} u  - \frac{n}{2}\log(\sigma^2) - \frac{1}{2}\log\lvert\Sigma_u\rvert.$$
-
-## Distribution of $(u \mid y)$
-
-We want the $Q$-function, but first need the distribution of $(u \mid y$).
-
-. . .
-
-By Bayes' theorem, we have
-
-$$
-\begin{aligned}f(u \mid y) = \frac{f(y \mid u) f(u)}{f(y)} &\propto \exp\left(-\frac{1}{2\sigma^2} \lVert y - X\beta - Z u\rVert_2^2 - \frac{1}{2} u^T \Sigma_u u\right) \\
-&\propto \exp\left(-\frac{1}{2}(u - \eta)^T G^{-1} (u - \eta)\right)\end{aligned}
-$$
-
-with
-$$G = \left(\frac{Z^T Z}{\sigma^2} + \Sigma_u^{-1}\right)^{-1}\qquad \text{and} \qquad \eta = \frac{G Z^T (y - X \beta)}{\sigma^2}.$$
-
-. . .
-
-So $(u \mid y) \sim \mathcal{N}(\eta,  G)$.
-
-### The $Q$ Function
-
-Now we can compute the $Q$ function:
-
-$$
-\begin{aligned}\operatorname{E}_{u \sim p(\cdot \mid y, \theta')} \ell(\theta) &= \frac{1}{2\sigma^2}\left(r^Tr - 2r^T Z \eta + \operatorname{tr}(Z^T Z G) + \eta^T Z^T Z \eta \right) \\
-&\phantom{={}}- \frac{1}{2}\left(\operatorname{tr}(\Sigma_u^{-1} G) + \eta^T \Sigma_u^{-1} \eta\right) \\
-&\phantom{={}} - \frac{n}{2} \log \sigma^2 - \frac{1}{2} \log | \Sigma_u |.\end{aligned}
-$$
-
-. . .
-
-Minimizing this with respect to $\theta$, we find
-
-$$
-\begin{aligned}\beta^* &= (X^T X)^{-1} X^T (y - Z \eta) \\
-                  (\sigma^2)^* &= \frac{1}{n}\left( \lVert y - X\beta\rVert_2^2 - 2 (y - X\beta)^T Z \eta + \operatorname{tr}(Z^T Z G)\right)\\
-                \Sigma_u^* &= \frac{1}{m}\left(G + \eta \eta^T\right)\end{aligned}
-$$
-
-### Simplification
-
-To test out how this works, we introduce two simplifications:
-
-- $\Sigma_u(\nu) = \nu I_m$
-- $X = \mathbf{1}$ (intercept-only fixed effects)
-- $z_{ij} \in \{0, 1\}$ (random intercept, fixed slope)
-
-. . .
-
-#### Easier Update
-
-$$\nu^* = \operatorname{tr}(G + \eta \eta^T) / m$$
-
-## Simple Example
-
-```{r setup-experiment}
-beta0 <- 1
-beta <- cbind(beta0)
-nu <- 2
-sigma <- 3
-
-m <- 20
-N <- 10
-ni <- rep(N, m)
-n <- sum(ni)
-
-X <- cbind(rep(1, n))
-Z <- Matrix::bdiag(lapply(ni, function(d) matrix(1, nrow = d, ncol = 1)))
-
-u <- rnorm(m, 0, sqrt(nu))
-mu <- X %*% beta + Z %*% u
-y <- rnorm(n, as.vector(mu), sigma)
+```{r}
+one()
 ```
 
-### Visualizing $Z$
+## Source Files
 
-```{r, fig.width = 7, fig.height = 6, echo = FALSE, cache = TRUE}
-Matrix::image(Z, aspect = 1)
+Better to put C++ code in an `.cpp` file (for instance in `src/` folder) and use
+`sourceCpp()` (or RStudio's UI tool) to compile the code and set up the R
+interface.
+
+. . .
+
+In `R/my_r_experiment.R` (or similar), call
+
+```r
+sourceCpp(here::here("src/my_cpp_functions.cpp"))
 ```
 
-### Define the Log-Likelihood
-
-```{r loglik-def}
-loglik <- function(y, X, Z, beta, sigma, nu) {
-  n <- length(y)
-  m <- ncol(Z)
-
-  r <- y - X %*% beta
-  U <- Z %*% tcrossprod(nu * diag(m), Z) + sigma^2 * diag(n)
-  inv_U_r <- solve(U, r)
-  log_det_U <- log(det(U))
-
-  -0.5 * (crossprod(r, inv_U_r) + log_det_U + n * log(2 * pi))
-}
+```
+my_project/
+├── scripts/
+│   └── my_r_experiment.R    # R script
+├── src/
+│   └── my_cpp_functions.cpp # Source for C++ functions
+└── my_rproject.Rproj        # RStudio project file
 ```
 
-```{r em-algorithm, echo = FALSE}
-library(Matrix)
-mixed_model_em <- function(
-  y,
-  X,
-  Z,
-  beta = 0,
-  sigma2 = 1,
-  nu = 0.5,
-  maxit = 100,
-  tol = 1e-6
-) {
-  n <- length(y)
-  m <- ncol(Z)
-  loss <- double(maxit)
+. . .
 
-  XtX <- crossprod(X)
-  ZtZ <- crossprod(Z)
+Each file should start with
 
-  for (i in seq_len(maxit)) {
-    loss[i] <- -loglik(y, X, Z, beta, sqrt(sigma2), nu)
+```cpp
+#include <Rcpp.h>
+using namespace Rcpp; // Optional
+```
 
-    r <- y - X %*% beta
-    Gamma <- solve(ZtZ / drop(sigma2) + diag(m) / nu)
-    eta <- Gamma %*% crossprod(Z, r) / drop(sigma2)
-    Z_eta <- Z %*% eta
-    G <- tcrossprod(eta) + Gamma
+## Sum Functions
 
-    beta <- solve(XtX, crossprod(X, y - Z_eta))
-    nu <- sum(diag(G)) / m
-    sigma2 <- (norm(r, "2")^2 +
-      sum(diag((ZtZ %*% G))) -
-      2 * crossprod(r, Z_eta)) /
-      n
+Let's see if we can beat R's own `sum()` (See
+[here](https://github.com/wch/r-source/blob/3b69aff4083ee81d6c4fe7177eb2b2a2ca41a240/src/main/summary.c#L152)
+for the implementation.)
 
-    if (i > 1) {
-      if (loss[i - 1] - loss[i] <= loss[i] * tol) {
-        break
-      }
-    }
+```{r bench-sum, cache = TRUE, fig.width = 10, fig.height = 4}
+x <- runif(1e5)
+bench::mark(sum(x), sum_cpp(x), sum_r(x)) |>
+  plot()
+```
+
+## Exercise
+
+Write a C++ function `cpp_mean()` that computes the arithmetic mean of a numeric
+input vector.
+
+Benchmark your function against `mean()`.
+
+## Constants
+
+- In C++, we can use `const` to declare constants.
+- After declaration, the value cannot be changed.
+- Can lead to _marginal_ performance improvements.
+
+```cpp
+const double pi = 3.14159;
+pi = 3.14; // Error!
+```
+
+### `Const` Correctness
+
+- Enforce immutability wherever appropriate.
+- Can help avoid bugs.
+- Up to you
+
+## Passing by Reference
+
+- Useful to avoid copying large objects or when we want to modify the input.
+- Post-fix `&` to the type.
+
+```{Rcpp rcpp-sum-ref, eval = FALSE}
+// [[Rcpp::export]]
+double sum_cpp_ref(Rcpp::NumericVector& x) {
+  double total = 0.0;
+  const int n = x.size();
+
+  for (int i = 0; i < n; ++i) {
+    total += x[i];
   }
 
-  list(
-    par = c("beta" = drop(beta), "nu" = nu, "sigma2" = drop(sigma2)),
-    loss = loss[seq_len(i)]
-  )
+  return total;
 }
-```
-
-## Testing
-
-```{r A-ez}
-par0 <- c(0.2, 2.1, 0.9)
-res_em <- mixed_model_em(y, X, Z, par0[1], par0[2], par0[3])
-res_em$par
 ```
 
 . . .
 
-```{r lmer, message=FALSE}
-library(lme4)
+### Rcpp Objects Reference R Objects
 
-mixed_data <- data.frame(y = y, Subject = factor(rep(1:m, times = ni)))
-mixed_lmer <- lmer(y ~ (1 | Subject), data = mixed_data, REML = FALSE)
+- Modifing the Rcpp object modifies the original object.
+- Little point in using `&` in **exported** functions.
+
+## Const Reference
+
+- If you don't want to modify the input, you can pass by const reference.
+- Pre-fix `const` to the type.
+
+```{Rcpp rcpp-sum-constref, eval = FALSE}
+// [[Rcpp::export]]
+double sum_cpp_const_ref(const Rcpp::NumericVector& x) {
+  double total = 0.0;
+  const int n = x.size();
+
+  for (int i = 0; i < n; ++i) {
+    total += x[i];
+  }
+
+  return total;
+}
 ```
 
-:::: {.columns}
+- In C++, this can make a big difference.
+- But with Rcpp, it makes little difference.
+- Sometimes no difference with standard C++ too.
 
-::: {.column width="47%"}
+### Value of Constant References
 
-```{r lmer-effects}
-fixef(mixed_lmer)
-```
-
-:::
-
-::: {.column width="47%"}
-
-```{r var-corr}
-as.data.frame(VarCorr(mixed_lmer))[, c(1, 4)]
-```
-
-:::
-
-::::
-
-### Convergence
-
-```{r plot-convergence, echo = FALSE, warning = FALSE, fig.height = 7}
-tibble(it = seq_along(res_em$loss), loss = res_em$loss - min(res_em$loss)) |>
-  ggplot(aes(x = it, y = loss)) +
-  geom_line() +
-  geom_point() +
-  labs(x = "Iteration", y = "Suboptimality") +
-  scale_y_log10()
-```
-
-## Exercise: The Marginal Model
-
-Recall that
-$$y \sim \mathcal{N}(\mu_y = X\beta,\Sigma_y =  Z\Sigma_u Z^T + \sigma^2 I_n).$$
-
-. . .
-
-So, we can write the log-likelihood (of the simplified model) as
-$$\ell(\theta) = -\frac{1}{2} \left( (y - \beta_0)^T (\nu ZZ^T + \sigma^2 I_n)^{-1} (y - \beta_0) + \log\big\lvert \nu Z Z^T + \sigma^2 I_n \big\rvert \right).$$
-
-Optimize this log-likelihood directly using `optim()`. Use a numerical gradient.
-
-#### Hints
-
-- Make sure to load the `Matrix` package or use the namespace directly when
-  working with sparse matrices. --
-
-- How should you deal with the inverse?
-- How should you parameterize the problem?
-
-```{r marginal-loglik-optim, include = FALSE, cache = TRUE}
-marginal_loglik <- function(theta, y, X, ZZt) {
-  beta <- cbind(theta[1])
-  nu <- theta[2]
-  sigma2 <- theta[3]^2
-
-  r <- X %*% beta - y
-  U <- nu * ZZt + sigma2 * Matrix::diag(n)
-
-  out <- 0.5 *
-    (crossprod(r, solve(U, r)) + log(Matrix::det(U)) + n * log(2 * pi))
-  drop(out)
+```{Rcpp constref-ex, eval = FALSE}
+NumericVector f_copy(NumericVector x) {
+  return pow(x, 2);
 }
 
-theta0 <- c(2, 6, 0.2)
-res_optim <- optim(
-  theta0,
-  marginal_loglik,
-  method = "BFGS",
-  y = y,
-  X = X,
-  ZZt = tcrossprod(Z)
-)
-c(res_optim$par[1:2], res_optim$par[3]^2)
+NumericVector f_constref(const NumericVector& x) {
+  return pow(x, 2);
+}
 
-res_em$par
+// [[Rcpp::export]]
+NumericVector f_copyref(const bool copy) {
+  NumericVector x = runif(100000);
+  if (copy) {
+    return f_copy(x);
+  } else {
+    return f_constref(x);
+  }
+}
 ```
 
 ### Benchmark
 
-```{r benchmark, cache = TRUE, warning = FALSE, echo = FALSE}
-par0 <- c(0.2, 2.1, 0.9)
-
+```{r constref-bench, cache = TRUE}
 bench::mark(
-  optim = {
-    optim(
-      par0,
-      marginal_loglik,
-      method = "BFGS",
-      y = y,
-      X = X,
-      ZZt = tcrossprod(Z)
-    )
-  },
-  em = {
-    mixed_model_em(y, X, Z, par0[1], par0[2], par0[3]^2)
-  },
+  f_copyref(TRUE),
+  f_copyref(FALSE),
+  check = FALSE
+)
+```
+
+## Sugar
+
+- Rcpp contains a wealth of syntactic **sugar**
+- Often versions of R's vectorized functions
+
+```{Rcpp rcpp-sum-sugar, eval = FALSE}
+// [[Rcpp::export]]
+double sum_cpp_sugar(const Rcpp::NumericVector& x) {
+  return Rcpp::sum(x);
+}
+```
+
+## Premature Optimization
+
+- Most C++ compilers will optimize the code for you.
+- What you see in the source code is **not** what you get.
+- Temporary variables are often optimized away.
+- Copy elisions
+
+## Exercise
+
+- Implement `cpp_sd()` using Rcpp that computes the standard deviation of a
+  (numeric) vector. Benchmark against `sd()`.
+- Remember to test your functions.
+- Don't use `Rcpp:sd()`, please ☺
+- If you have time over, try a different algorithm for computing the standard
+  deviation.
+
+```{Rcpp rcpp-sd, eval = FALSE, echo = FALSE}
+// [[Rcpp::export]]
+double cpp_sd(NumericVector x) {
+  double out = 0.0;
+  double x_mean = 0.0;
+
+  int n = x.size();
+
+  for (int i = 0; i < n; ++i) {
+    out += x[i] / n;
+  }
+
+  for (int i = 0; i < n; ++i) {
+     out += std::pow(x[i] - x_mean, 2);
+  }
+
+  return std::sqrt(out / (n - 1));
+}
+```
+
+. . .
+
+```{r sd-bench, echo = FALSE, cache = TRUE}
+x <- rnorm(1e5)
+bench::mark(cpp_sd(x), sd(x), check = FALSE) |> plot()
+```
+
+## Von Mises Rejection Sampling
+
+### For-Loop Version
+
+```{r vM-rejection, cache = TRUE}
+rvonmises <- function(n, kappa) {
+  y <- numeric(n)
+  for (i in 1:n) {
+    reject <- TRUE
+    while (reject) {
+      y0 <- runif(1, -pi, pi)
+      u <- runif(1)
+      reject <- u > exp(kappa * (cos(y0) - 1))
+    }
+    y[i] <- y0
+  }
+  y
+}
+```
+
+### Vectorized Version
+
+:::: {.columns}
+
+::: {.column width="47%"}
+
+```{r vM-rejection-fast, cache = TRUE}
+new_sampler <- function(generator) {
+  alpha <- 1
+  function(n, ...) {
+    y <- list()
+    j <- 1
+    l <- 0
+    while (l < n) {
+      m <- ceiling((n - l) / alpha)
+      y[[j]] <- generator(m, ...)
+      l <- l + length(y[[j]])
+      if (j == 1) {
+        alpha <<- (l + 1) / (m + 1)
+      }
+      j <- j + 1
+    }
+    unlist(y)[1:n]
+  }
+}
+```
+
+:::
+
+::: {.column width="47%"}
+
+```{r vM-rejection-vec-ran, cache = TRUE}
+vonmises_generator <- function(m, kappa) {
+  y <- runif(m, -pi, pi)
+  u <- runif(m)
+  accept <- u <= exp(kappa * (cos(y) - 1))
+  y[accept]
+}
+```
+
+```{r vM-rejection-vec, cache = TRUE}
+rvonmises_vec <-
+  new_sampler(vonmises_generator)
+```
+
+:::
+
+::::
+
+### Rcpp Implementation
+
+```{Rcpp vMsim-cpp, eval = FALSE}
+// [[Rcpp::export]]
+NumericVector rvonmises_cpp(const int n, const double kappa) {
+  NumericVector y(n);
+  int i = 0;
+
+  while (i < n) {
+    double y0 = R::runif(-M_PI, M_PI);
+    bool accept = R::runif(0, 1) <= exp(kappa * (cos(y0) - 1));
+    if (accept) {
+      y[i] = y0;
+      i++;
+    }
+  }
+
+  return y;
+}
+```
+
+```{r vMsim3, dependson="vMsim-cpp", fig.width = 12, echo = FALSE}
+par(mfrow = c(1, 2))
+f <- function(x, k) exp(k * cos(x)) / (2 * pi * besselI(k, 0))
+x <- rvonmises_cpp(100000, 0.5)
+hist(x, breaks = seq(-pi, pi, length.out = 20), prob = TRUE)
+curve(f(x, 0.5), -pi, pi, col = "blue", lwd = 2, add = TRUE)
+x <- rvonmises_cpp(100000, 2)
+hist(x, breaks = seq(-pi, pi, length.out = 20), prob = TRUE)
+curve(f(x, 2), -pi, pi, col = "blue", lwd = 2, add = TRUE)
+par(mfrow = c(1, 1))
+```
+
+```{r vMsim-cpp-runtime, dependson=c("vMsim-cpp", "vM-rejection-vec", "vM-rejection"), echo = FALSE, fig.width = 11}
+bench::mark(
+  rvonmises(1000, kappa = 5),
+  rvonmises_vec(1000, kappa = 5),
+  rvonmises_cpp(1000, kappa = 5),
   check = FALSE
 ) |>
   plot()
 ```
 
-. . .
+## The Standard Template Library (STL)
 
-But this is admittedly a flawed comparison. Why?
+- A library of generic algorithms, data structures, and iterators for C++. --
 
-- No standard convergence criterion
-- Numerical gradients (and Hessian) used in `optim()`
-
-## Summary
-
-### Gaussian Mixtures
-
-- We profiled implementations of our EM algorithm for Gaussian mixtures
-- We experimented with various implementations of the empirical Fisher
-  information.
+- Accessed via the `std` namespace.
+- Provides a number of useful functions for working with vectors and other
+  containers.
 
 . . .
 
-### Mixed Models
+### Efficiently Growing Vectors
 
-- We fit mixed models using the EM algoroithm.
-- We compared this approach to directly optimizing the marginal likelihood.
+Unlike R and Rcpp vector, `std::vector()` grows efficiently.
+
+```cpp
+std::vector<int> x;
+
+for (int i = 0; i < 10; ++i) {
+  x.emplace_back(i)
+}
+```
+
+## Linear Algebra
+
+### RcppArmadillo
+
+```cpp
+#include <RcppArmadillo.h>
+// [[Rcpp::depends(RcppArmadillo)]]
+// [[Rcpp::export]]
+arma::mat armaMatrixMultiply(const arma::mat &A, const arma::mat &B) {
+  return A * B;
+}
+```
 
 . . .
 
-## Next Time
+### RppEigen
 
-Stochastic gradient descent
+```cpp
+#include <RcppEigen.h>
+// [[Rcpp::depends(RcppEigen)]]
+// [[Rcpp::export]]
+Eigen::MatrixXd eigenMatrixMultiply(const Eigen::MatrixXd &A,
+                                    const Eigen::MatrixXd &B) {
+  return A * B;
+}
+```
+
+## R Markdown
+
+Can put the code in Rcpp chunks, which will be automatically compiled and
+exported.
+
+```{Rcpp rcpp-odd-ex, echo = FALSE}
+#include <Rcpp.h>
+using namespace Rcpp;
+
+// [[Rcpp::export]]
+bool is_odd_cpp(int num = 10) {
+   bool result = (num % 2 == 1);
+   return result;
+}
+```
+
+:::: {.columns}
+
+::: {.column width="47%"}
+
+<!-- prettier-ignore-start -->
+
+```{Rcpp}`r ''`
+#include <Rcpp.h>
+using namespace Rcpp;
+
+// [[Rcpp::export]]
+bool is_odd_cpp(int num = 10) {
+   bool result = (num % 2 == 1);
+   return result;
+}
+```
+````
+
+<!-- prettier-ignore-end -->
+
+:::
+
+::: {.column width="47%"}
+
+```{r}
+is_odd_cpp(7)
+```
+
+:::
+
+::::
+
+## Packages
+
+- Best practice for Rcpp code is actually to write a package.
+- Not as complicated as you might think!
+- Facilitates reproducibility
+- If we have time, we might cover in course.
+
+:::: {.columns}
+
+::: {.column width="47%"}
+
+### R Packages
+
+Great book to get started; free and available online at <https://r-pkgs.org>.
+
+:::
+
+::: {.column width="47%"}
+
+![](../images/r-pkgs.png)
+
+:::
+
+::::
+
+## Exercise
+
+Recall the running mean implementation:
+
+```{r run-mean}
+run_mean <- function(y, k) {
+  n <- length(y)
+  m <- floor((k - 1) / 2)
+  k <- 2 * m + 1
+  y <- y / k
+  s <- rep(NA, n)
+  s[m + 1] <- sum(y[1:k])
+  for (i in (m + 1):(n - m - 1)) {
+    s[i + 1] <- s[i] - y[i - m] + y[i + 1 + m]
+  }
+  s
+}
+```
+
+- Rewrite this in Rcpp and compare the performance.
+- Test your implementation
+- Benchmark it against `run_mean()`
+
+```{Rcpp rcpp-runmean, echo = FALSE, eval=FALSE}
+// [[Rcpp::export]]
+NumericVector run_mean_cpp(NumericVector y, int k) {
+  int n = y.size();
+  int m = floor((k - 1) / 2);
+  int kk = 2 * m + 1;
+  NumericVector s = rep(NA_REAL, n);
+  s[m] = 0;
+  for(int i = 0; i < kk; ++i)
+    s[m] += y[i] / kk;
+  for(int i = m; i < (n - m - 1); ++i)
+    s[i + 1] = s[i] - y[i - m] / kk + y[i + 1 + m] / kk;
+  return s;
+}
+```
+
+### Testing
+
+```{r runmean-test}
+library(testthat)
+
+test_that("R and C++ running mean functions are equivalent", {
+  y <- rnorm(7)
+  expect_equal(run_mean(y, k = 3), run_mean_cpp(y, k = 3))
+})
+```
+
+### Benchmarking
+
+```{r runmean-bench, message = FALSE, cache = TRUE}
+y <- rnorm(4096)
+run_bench <- bench::press(
+  n = c(512, 1024, 2048, 4096),
+  {
+    y <- rnorm(n)
+    bench::mark(
+      run_mean(y, k = 11),
+      run_mean_cpp(y, k = 11),
+      check = FALSE
+    )
+  }
+)
+```
+
+```{r plot-bench, fig.width = 12, fig.height = 6, echo = FALSE}
+plot(run_bench)
+```
+
+## Getting Help
+
+- [The unofficial Rcpp API documentation](https://thecoatlessprofessor.com/programming/cpp/unofficial-rcpp-api-documentation/)
+- [The many official vignettes](https://cran.r-project.org/web/packages/Rcpp/index.html)
+- [Rcpp For Everyone](https://teuder.github.io/rcpp4everyone_en/) by Masaki E.
+  Tsuda
