--- a/slides/lecture3.qmd
+++ b/slides/lecture3.qmd
@@ -8,8 +8,8 @@ execute:
 {{< include _common.qmd >}}
 
 ```{r setup, include=FALSE}
-source(here::here("R/kernel.R"), keep.source = TRUE)
-source(here::here("R/gauss.R"), keep.source = TRUE)
+source(here::here("R", "kernel.R"), keep.source = TRUE)
+source(here::here("R", "gauss.R"), keep.source = TRUE)
 ```
 
 ## Today
