--- a/index.qmd
+++ b/index.qmd
@@ -26,9 +26,8 @@ for you to solve independently at your own pace.
 
 #### Exercise Session 1
 
-- **Main topic**: Functional Programming vs OOP (+ Currying/Function Factories)
-- In class walkthrough: A.8-A.12 (CSwR, Appendix A) and exercises 2.1-2.6 (CSwR,
-  Chapter 2)
+- **Main topic**: Setting up a proper development environment for R/Rcpp
+- **In class walkthrough**: A1-A7 (CSwR, Appendix A)
 
 #### Lecture 2: OOP and Density Estimation
 
@@ -50,6 +49,11 @@ for you to solve independently at your own pace.
 <!-- - **Exercises:** -->
 <!--   [1-3 (AdvR, Section 24.4.3)](https://adv-r.hadley.nz/perf-improve.html#exercises-71) -->
 <!---->
+<!-- #### Exercise Session 2
+
+- **Main topic**: Functional Programming vs OOP (+ Currying/Function Factories)
+- In class walkthrough: A.8-A.12 (CSwR, Appendix A) and exercises 2.1-2.6 (CSwR,
+  Chapter 2) -->
 <!-- #### Lecture 4: Scatterplot Smoothing -->
 <!---->
 <!-- - **Slides:** [Scatterplot Smoothing](slides/lecture4.pdf) -->
@@ -57,12 +61,7 @@ for you to solve independently at your own pace.
 <!-- - **Exercises:** -->
 <!--   [3.4 (CSwR, Chapter 3)](https://cswr.nrhstat.org/bivariate#bivariate:ex) -->
 <!---->
-<!-- #### Exercise Session 2 -->
-<!---->
-<!-- - **Main topic**: How to use AI -->
-<!-- - Mini-slides: TBA -->
-<!-- - In class walkthrough: Student-voted exercises -->
-<!---->
+
 <!-- ### Week 3 -->
 <!---->
 <!-- #### Lecture 5: Random Number Generation and Rejection Sampling -->
